--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
 			<version>7.7.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>elasticsearch-rest-high-level-client</artifactId>
+			<version>7.7.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
